--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "commander": "^10.0.0",
-    "inquirer": "^8.2.5"
+    "inquirer": "^8.2.5",
+    "openai": "^3.2.1"
   }
 }
