--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/commander": "^2.12.2",
-    "@types/inquirer": "^9.0.3"
+    "@types/inquirer": "^9.0.3",
+    "@types/prismjs": "^1.26.0"
   },
   "dependencies": {
     "commander": "^10.0.0",
