--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "wtfdid-cli",
-  "version": "0.0.1",
-  "description": "",
+  "version": "0.0.3",
+  "description": "A CLI for chat GPT and writing code with GPT as an assistant",
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc && npm link"
   },
   "bin": {
-    "wtfdid": "./build/index.js"
+    "wtfdid": "./build/index.js",
+    "wtfhack": "./build/index.js"
   },
   "author": "",
   "license": "ISC",
