added automatic context trimmer. added ASK command to ask about a specific file

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wtfdid-cli",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "A CLI for chat GPT and writing code with GPT as an assistant",
   "main": "index.ts",
   "scripts": {
@@ -9,7 +9,8 @@
   },
   "bin": {
     "wtfdid": "./build/index.js",
-    "wtfhack": "./build/index.js"
+    "wtfhack": "./build/index.js",
+    "wtfchat": "./build/index.js"
   },
   "author": "",
   "license": "ISC",
