--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@types/commander": "^2.12.2",
     "@types/inquirer": "^9.0.3",
     "@types/prismjs": "^1.26.0",
-    "release-it": "^15.10.1"
+    "release-it": "^15.10.1",
+    "typescript": "^5.0.4"
   },
   "dependencies": {
     "commander": "^10.0.0",
