--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/commander": "^2.12.2",
     "@types/inquirer": "^9.0.3",
+    "@types/node-fetch": "^2.6.3",
     "@types/prismjs": "^1.26.0",
     "release-it": "^15.10.1",
     "typescript": "^5.0.4"
@@ -27,6 +28,7 @@
     "commander": "^10.0.0",
     "inquirer": "^8.2.5",
     "mixpanel": "^0.17.0",
+    "node-fetch": "^2.6.9",
     "openai": "^3.2.1",
     "prismjs": "^1.29.0"
   }
