--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "axios": "^1.3.6",
+    "cheerio": "^1.0.0-rc.12",
     "commander": "^10.0.0",
     "inquirer": "^8.2.5",
     "mixpanel": "^0.17.0",
